@@ -6,6 +6,8 @@ Version 0.9.0alpha12 - 2007-06-XX
      - On UNIX from "~/.picard" to "$XDG_CONFIG_HOME/MusicBrainz/Picard" (usually "~/.config/MusicBrainz/Picard")
    * Picard no longer logs every action and doesn't saves the logs. To enable more debug logging, use command
      line argument "-d" or "--debug" or environment variable "PICARD_DEBUG".
+ * New Features:
+   * Save embedded images to MP4 files.
 
 Version 0.9.0alpha11 - 2007-05-27
  * New Features:
